--- a/src/layouts/post.jade
+++ b/src/layouts/post.jade
@@ -1,7 +1,7 @@
 extends base
 
 block stylesheets
-  link(href="/styles/tomorrow-night-bright.css", rel="stylesheet")
+  link(href="/styles/post.css", rel="stylesheet")
 
   div.content.post-content
     h1.post-title= title
