--- a/src/pages/blog/index.jade
+++ b/src/pages/blog/index.jade
@@ -1,4 +1,6 @@
 extends ../../layouts/base
+block stylesheets
+  link(href="/styles/posts.css", rel="stylesheet")
 block content
   div.content
     ul.posts
