--- a/src/pages/blog/index.jade
+++ b/src/pages/blog/index.jade
@@ -2,7 +2,7 @@ extends ../../layouts/base
 block stylesheets
   link(href="/styles/posts.css", rel="stylesheet")
 block content
-  div.content
+  .content
     ul.posts
       each post in posts
         li.post
