--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -3,11 +3,11 @@ block stylesheets
   link(href="/styles/home.css", rel="stylesheet")
 
 block content
-  div.content
-    div.quote The computer is the most remarkable tool that we've ever come up with. It's the equivalent of a bicycle for our minds.
-    div.author Steve Jobs
+  .content
+    .quote The computer is the most remarkable tool that we've ever come up with. It's the equivalent of a bicycle for our minds.
+    .author Steve Jobs
 
 block scripts
   script(src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js")
-  script(src="https://rawgithub.com/colinwren/dissolve/master/src/dissolve.js")
+  script(src="scripts/dissolve.js")
   script(src="scripts/home.js")
