--- a/src/layouts/post.jade
+++ b/src/layouts/post.jade
@@ -3,7 +3,7 @@ extends base
 block stylesheets
   link(href="/styles/post.css", rel="stylesheet")
 
-  div.content.post-content
+  .content.post-content
     h1.post-title= title
     h2.created Published 
       abbr.timeago(title="#{date}")
