SCSS file structure refactoring

--- a/src/pages/blog.jade
+++ b/src/pages/blog.jade
@@ -1,6 +1,5 @@
-extends ../../layouts/base
-block stylesheets
-  link(href="/styles/posts.css", rel="stylesheet")
+extends ../layouts/base
+
 block content
   .content
     ul.posts
