--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -3,14 +3,17 @@ html
   head
     title Colin Wren
     meta(charset="utf8")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width")
-    block stylesheets
+    meta(name="description", content="Colin Wren's website")
+    link(href="/styles/main.css", rel="stylesheet")
+
   body
     ul.nav
       li.nav-item.nav-blue
         a(href="/") home
       li.nav-item.nav-orange
-        a(href="/blog") blog
+        a(href="/blog.html") blog
 
     block header
     block content
