--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,13 +1,14 @@
 @import 'http://fonts.googleapis.com/css?family=Cabin';
 
 a {
+  font-family: cabin;
   text-decoration: none;
+  font-weight: bold;
   color: hsl(0, 0%, 23%);
   &:hover {
     text-decoration: underline;
   }
 }
-
 
 body {
   margin: 0px;
@@ -21,34 +22,4 @@ body {
   width: 70%;
   max-width: 810px;
   margin: 0 auto;
-}
-
-.nav {
-  position: fixed;
-  bottom: 0;
-  left: 20px;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  font-family: "Helvetica Neue", Helvetica, arial, freesans, clean, sans-serif;
-  cursor: pointer;
-  li {
-    float: left;
-  }
-}
-
-.nav-item {
-    padding: 20px 15px;
-  font-size: 25px;
-  letter-spacing: 1px;
-  a {
-    text-decoration: none;
-    color: hsl(0, 0%, 23%);
-    &:hover {
-      text-decoration: underline;
-    }
-    &:active {
-      opacity: 0.1;
-    }
-  }
 }
