--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,29 +1,26 @@
-@import "base";
-
 .quote {
   font-size: 44px;
-  margin: 18% 0 20px;
+  margin: 25% 0 20px;
   letter-spacing: 1px;
+  @include breakpoint(big-phone) {
+    font-size: 30px;
+  }
 }
 
 .author {
+  opacity: .6;
   margin: 35px 0;
-  color: hsl(0, 0%, 65%);
   font-size: 35px;
+  @include breakpoint(big-phone) {
+    font-size: 20px;
+  }
+  a {
+    color: hsl(0, 47%, 36%);
+  }
 }
 
 .opaque span{
   opacity: 0;
   filter: alpha(Opacity=00);
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=00)";
-}
-
-@media all and (max-width: 800px){
-  .quote{
-    font-size: 30px;
-  }
-
-  .author{
-    font-size: 20px;
-  }
 }
