--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
+// Compass mixins
+@import "compass/css3/opacity";
+@import "compass/css3/border-radius";
+
+// Vendor CSS
+@import "vendor/normalize";
+@import "vendor/syntax";
+
 @import "base";
 @import "breakpoints";
 @import "nav";
 @import "home";
 @import "posts";
 @import "post";
-@import "syntax";
