--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -1,7 +1,7 @@
 extends ../layouts/base
 
 block content
-  .content
+  .content.content-home
     .quote The computer is the most remarkable tool that we've ever come up with. It's the equivalent of a bicycle for our minds.
     .author Steve Jobs
 
