--- a/src/styles/_breakpoints.scss
+++ b/src/styles/_breakpoints.scss
@@ -1,11 +1,8 @@
 @mixin breakpoint($point) {
-  @if $point == tablet {
-    @media (max-width: 1600px) { @content; }
-  }
-  @else if $point == big-phone {
+  @if $point == big-phone {
     @media (max-width: 1250px) { @content; }
   }
   @else if $point == small-phone {
-    @media (max-width: 650px)  { @content; }
+    @media (max-width: 630px)  { @content; }
   }
 }
