--- a/src/layouts/post.jade
+++ b/src/layouts/post.jade
@@ -1,18 +1,16 @@
 extends base
 
 block content
-  .content.post-content
+  .post-content
     h1.post-title= title
     h2.created Published 
       abbr.timeago(title="#{date}")
-    div!= content
+    .post-body!= content
 
-    div#disqus_thread
+    #disqus_thread
     script
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'colinwren'; // required: replace example with your forum shortname
+        var disqus_shortname = 'colinwren';
 
-        /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
             var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
             dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
