--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,4 +1,4 @@
-@import 'http://fonts.googleapis.com/css?family=Cabin';
+@import 'http://fonts.googleapis.com/css?family=Cabin|Merriweather';
 
 a {
   font-family: cabin;
@@ -14,12 +14,11 @@ body {
   margin: 0px;
   background: hsl(20, 18%, 93%);
   font-family: cabin;
+  font-size: 18px;
   -webkit-font-smoothing: antialiased;
   color: hsl(0, 0%, 23%);
 }
 
 .content {
-  width: 70%;
-  max-width: 810px;
   margin: 0 auto;
 }
