--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -1,19 +1,26 @@
+.content-home {
+  width: 70%;
+  max-width: 810px;
+  @include breakpoint(big-phone) {
+    font-size: 14px;
+    width: 80%;
+  }
+  @include breakpoint(small-phone) {
+    font-size: 10px;
+    width: 90%;
+  }
+}
+
 .quote {
-  font-size: 44px;
+  font-size: 2.3em;
   margin: 25% 0 20px;
   letter-spacing: 1px;
-  @include breakpoint(big-phone) {
-    font-size: 30px;
-  }
 }
 
 .author {
   @include opacity(0.6);
   margin: 35px 0;
-  font-size: 35px;
-  @include breakpoint(big-phone) {
-    font-size: 20px;
-  }
+  font-size: 1.9em;
   a {
     color: hsl(0, 47%, 36%);
   }
