--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -1,16 +1,35 @@
+.post-content {
+  width: 80%;
+  max-width: 630px;
+  margin: 0 auto;
+  @include breakpoint(big-phone) {
+    font-size: 14px;
+    width: 84%;
+  }
+  @include breakpoint(small-phone) {
+    font-size: 14px;
+  }
+}
+
 .post-title {
-  font-size: 45px;
+  font-size: 2.6em;
+  margin: 0.65em 0 0;
+  @include breakpoint(small-phone) {
+    font-size: 2em;
+  }
 }
 
 .created {
-  font-size: 30px;
-  @include opacity( 0.2);
-  margin:15px 0;
+  font-size: 1.8em;
+  @include opacity(0.2);
+  @include breakpoint(big-phone) {
+    font-size: 1.4em;
+  }
 }
 
 .post-body{
-  font-size: 19px;
-  line-height: 25px;
+  font-family: 'Merriweather', serif;
+  line-height: 1.5em;
   margin-bottom: 50px;
   a {
     color: hsl(0, 47%, 36%);
@@ -18,18 +37,19 @@
 }
 
 code {
-  background: hsla(0, 0%, 18%, 0.11);
-  padding: 2px 4px;
-  font-size: 15px;
-  margin: 0 3px;
+  background: hsla(0, 0%, 18%, 0.05);
+  border: 1px solid hsla(0, 0%, 18%, 0.15);
+  padding: .1em .2em;
+  font-size: .8em;
+  margin: 0 .1em;
   @include border-radius(3px);
 }
 
 pre {
   font-family: monaco;
-  font-size: .8em;
+  font-size: 1.15em;
   code {
-    padding: 15px;
+    padding: 1em;
     line-height: 1.4em;
     font-family: monaco;
   }
