--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -1,26 +1,44 @@
+//- Mixin for post, used on homepage and post page
+mixin postHead(post)
+  .post-head.group
+    a(href="/#{post.url}")
+      h1.post-title= post.title
+    h2.post-date Published 
+      abbr.timeago(title="#{post.date.toISOString()}")
+
+mixin post(post)
+  mixin postHead(post)
+  .post-body!= post.content
+
+mixin nav(current)
+  ul.nav.group
+    li.icon-menu.menu
+    li.nav-link.pink(class= current === "index" ? "active" : "")
+      a.name(href="/") My Name
+    li.nav-link.sub-item.blue(class= current === "about" ? "active" : "")
+      a(href="/about.html") about
+    li.nav-link.sub-item.yellow(class= current === "projects" ? "active" : "")
+      a(href="/projects.html") projects
+    li.nav-link.sub-item.green(class= current === "archives" ? "active" : "")
+      a(href="/archives.html") archives
+
 doctype 5
 html
   head
-    title Colin Wren
     meta(charset="utf8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     meta(name="viewport", content="width=device-width")
-    meta(name="description", content="Colin Wren's website")
+    link(rel="icon", type="image/png", href="/images/cabin.png")
     link(href="/styles/main.css", rel="stylesheet")
-
+    block title
+      title= "My Blog"
   body
-    ul.nav
-      li.nav-item.nav-blue
-        a(href="/") home
-      li.nav-item.nav-orange
-        a(href="/blog.html") blog
+    block nav
 
-    block header
-    block content
-    block scripts
+    .content
+      block content
+    a(href="http://colinwren.github.io/Cabin/")
+      img.cabin(src="/images/cabin.png")
 
-    script
-      var _gaq=[['_setAccount','UA-34596567-2'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-        s.parentNode.insertBefore(g,s)}(document,'script'));
+    script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js", type="text/javascript")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.1.0/jquery.timeago.min.js", type="text/javascript")
+    script(src="/scripts/main.js", type="text/javascript")
