--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,8 @@
-// Compass mixins
-@import "compass/css3/opacity";
-@import "compass/css3/border-radius";
-
-// Vendor CSS
-@import "vendor/normalize";
-@import "vendor/syntax";
-
-@import "base";
-@import "breakpoints";
-@import "nav";
-@import "home";
-@import "posts";
-@import "post";
+@import 'compass/css3/transition';
+@import 'compass/css3/border-radius';
+@import 'compass/css3/box-shadow';
+@import 'solarized-dark.syntax.css';
+@import 'icons';
+@import 'base';
+@import 'nav';
+@import 'post';
