Update blok theme

--- a/src/pages/index.jade
+++ b/src/pages/index.jade
@@ -5,19 +5,16 @@ block content
   each post in posts
     .post
       mixin post(post)
-  ul.pagination.group
+      div.comments
+        a(href="#{data.baseUrl}#{post.url}#comments")
+          span.icon-bubbles
+          | Comments
+  .pagination.group
     - for (var i = 0; i < pages.length; i++) {
-    -   if (pages[i].currentPage) var currentIndex = i;
-    - }
-
-    - for (var j = 0; j < pages.length; j++) {
-      - var page = pages[j];
-      - if (j === currentIndex - 1) {
-        li.newer
-          a(href="#{page.url}") Newer &#8594;
-      - } else if (j === currentIndex + 1) {
-        li.older
-          a.active-page(href="#{page.url}") &#8592; Older
+      - var page = pages[i];
+      - if (i === currentIndex - 1) {
+        a.newer(href="#{data.baseUrl}#{page.url}") Newer &#8594;
+      - } else if (i === currentIndex + 1) {
+        a.older(href="#{data.baseUrl}#{page.url}") &#8592; Older
       - }
     - }
-
