--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,43 +1,42 @@
 .nav {
   position:fixed;
   z-index: 100;
-  width: 275px;
+  width: 250px;
   right: -105px;
   top: 0;
 
   a {
     padding: 14px;
     display: block;
-  }
-
-  li {
-    margin: 0;
-    @include transition( all 200ms cubic-bezier(0.420, 0.000, 0.580, 1.000));
-
-    @include breakpoint(big-phone) {
-      @include transition( all 400ms cubic-bezier(0.420, 0.000, 0.580, 1.000));
-    }
-  }
-
-  .active {
-    margin-left: -45px;
-
-    &:hover {
-      margin-left: -45px;
-    }
-  }
-
-  a {
     color: white;
     text-decoration: none;
     font-weight: bold;
   }
 }
 
-.nav .nav-link {
+.nav-link {
+  margin: 0;
   position: relative;
-  z-index:90;
-  width:245px;
+  z-index: 90;
+  width: 245px;
+  @include transition( all 200ms cubic-bezier(0.420, 0.000, 0.580, 1.000));
+
+  &:hover {
+    margin-left: -45px;
+  }
+
+  @include breakpoint(big-phone) {
+    @include transition(none);
+    margin-left: 180px;
+
+    &.nav-show {
+      margin-left: 35px;
+    }
+  }
+}
+
+.active {
+  margin-left: -45px;
 
   &:hover {
     margin-left: -45px;
@@ -45,27 +44,22 @@
 
   @include breakpoint(big-phone) {
     margin-left: 180px;
-    display: none;
 
-    &.nav-show{
-      margin-left: 40px;
-      display: block;
-
-      &.active {
-        margin-left: 0px;
-      }
+    &.nav-show {
+      margin-left: 0px;
     }
   }
 }
 
+
 .menu {
-  width: 140px;
+  width: 124px;
   padding: 5px;
   display: none;
   position: absolute;
-  right:0;
+  right: 0;
   color: white;
-  font-size: 1.4em;
+  font-size: 1.6em;
   @include shadow(hsl(0, 0%, 40%));
 
   @include breakpoint(big-phone) {
@@ -73,10 +67,10 @@
   }
 }
 
-.pink   { @include shadow(#ff6b77); }
-.green  { @include shadow(#1fda9a); }
-.blue   { @include shadow(hsl(216, 100%, 71%)); }
-.yellow { @include shadow(orange);    }
+.red    { @include shadow($red); }
+.green  { @include shadow($green); }
+.blue   { @include shadow($blue); }
+.orange { @include shadow($orange); }
 
 .name {
   font-weight: normal;
