--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -1,9 +1,8 @@
-//- Mixin for post, used on homepage and post page
 mixin postHead(post)
   .post-head.group
-    a(href="/#{post.url}")
+    a(href="#{data.baseUrl}#{post.url}")
       h1.post-title= post.title
-    h2.post-date Published 
+    h2.post-date Published&nbsp
       abbr.timeago(title="#{post.date.toISOString()}")
 
 mixin post(post)
@@ -13,22 +12,22 @@ mixin post(post)
 mixin nav(current)
   ul.nav.group
     li.icon-menu.menu
-    li.nav-link.pink(class= current === "index" ? "active" : "")
-      a.name(href="/") My Name
-    li.nav-link.sub-item.blue(class= current === "about" ? "active" : "")
-      a(href="/about.html") about
-    li.nav-link.sub-item.yellow(class= current === "projects" ? "active" : "")
-      a(href="/projects.html") projects
-    li.nav-link.sub-item.green(class= current === "archives" ? "active" : "")
-      a(href="/archives.html") archives
+    li.nav-link.red(class= current === "index" ? "active" : "")
+      a.name(href="#{data.baseUrl}") My Name
+    li.nav-link.blue(class= current === "about" ? "active" : "")
+      a(href="#{data.baseUrl}about.html") about
+    li.nav-link.orange(class= current === "projects" ? "active" : "")
+      a(href="#{data.baseUrl}projects.html") projects
+    li.nav-link.green(class= current === "archives" ? "active" : "")
+      a(href="#{data.baseUrl}archives.html") archives
 
 doctype 5
 html
   head
-    meta(charset="utf8")
-    meta(name="viewport", content="width=device-width")
-    link(rel="icon", type="image/png", href="/images/cabin.png")
-    link(href="/styles/main.css", rel="stylesheet")
+    meta(charset="utf-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+    link(rel="icon", type="image/png", href="#{data.baseUrl}images/cabin.png")
+    link(href="#{data.baseUrl}styles/main.css", rel="stylesheet")
     block title
       title= "My Blog"
   body
@@ -36,9 +35,11 @@ html
 
     .content
       block content
-    a(href="http://colinwren.github.io/Cabin/")
-      img.cabin(src="/images/cabin.png")
+    a(href="http://cabinjs.com")
+      img.cabin(src="#{data.baseUrl}images/cabin.png")
 
     script(src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js", type="text/javascript")
     script(src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.1.0/jquery.timeago.min.js", type="text/javascript")
-    script(src="/scripts/main.js", type="text/javascript")
+    script(src="#{data.baseUrl}scripts/main.js", type="text/javascript")
+    script.
+      // Add your analytics code here
