--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,12 +1,17 @@
-$green: hsl(151, 65%, 60%);
-$offBlack: hsl(10, 1%, 22%);
+$red:      hsl( 355, 100%,   71%);
+$blue:     hsl( 216, 100%,   71%);
+$green:    hsl( 159,  75%,   49%);
+$orange:   hsl(  39,  100%,  50%);
+$blueGrey: hsl( 210,   62%,  57%);
+$offBlack: hsl( 10,     1%,  22%);
+$lightGrey: lighten($offBlack, 50);
 
 $codeFont: Monaco, Consolas, monospace;
-$postFont: 'Merriweather', serif;
-$headerFont: 'Open Sans', sans-serif;
+$mainFont: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-$mainTheme: $green;
-$mainFont: $offBlack;
+$baseTextColor: $offBlack;
+$lightTextColor: $lightGrey;
+$linkColor: $blueGrey;
 
 @mixin breakpoint($point) {
   @if $point == big-phone {
@@ -22,12 +27,18 @@ $mainFont: $offBlack;
   @include box-shadow( 5px 5px desaturate(darken($color, 10), 20));
 }
 
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 body {
-  margin: 0 0 33px;
-  color: $mainFont;
+  margin: 0;
+  color: $baseTextColor;
   background: hsl(0, 0%, 94%);
   -webkit-font-smoothing: antialiased;
-  font-family:"Helvetica Neue",Helvetica, Arial, sans-serif;
+  font-family: $mainFont;
   font-size: 18px;
 
   @include breakpoint(big-phone) {
@@ -61,14 +72,14 @@ h2 {
 }
 
 a {
-  color: $mainFont;
+  color: $baseTextColor;
   text-decoration: none;
 }
 
 .content {
   position: relative;
-  margin: 33px auto 0;
-  max-width: 650px;
+  margin: 33px auto;
+  max-width: 700px;
   width: 55%;
 
   @include breakpoint(big-phone) {
@@ -88,47 +99,32 @@ a {
 .pagination {
   height: 40px;
 
-  li {
-    float: left;
+  a {
     padding: 10px;
     @include shadow(hsl(0, 0%, 100%));
   }
 }
 
 .older {
-  position: absolute;
-  left: 0;
+  float: left
 }
 
 .newer {
-  position: absolute;
-  right: 0;
+  float: right;
 }
 
 .cabin {
   position: fixed;
-  right: .5em;
-  bottom: .5em;
-  width: 1.6em;
-  opacity: .2;
+  right: 0.5em;
+  bottom: 0.2em;
+  width: 1.8em;
+  @include opacity(.2);
 
   &:hover {
-    opacity: .4;
+    @include opacity(.6);
   }
 
   @include breakpoint(big-phone) {
     display: none;
   }
-}
-
-@mixin clearfix {
-  &:after {
-  content: "";
-  display: table;
-  clear: both;
-  }
-}
-
-.group {
-  @include clearfix;
 }
