--- a/src/styles/_icons.scss
+++ b/src/styles/_icons.scss
@@ -1,5 +1,11 @@
 /*Icon Set: IcoMoon - Free -- http://keyamoon.com/icomoon/*/
 /*License:  CC BY 3.0 -- http://creativecommons.org/licenses/by/3.0/*/
+
+/*
+Note: To edit icons, go to the following url: http://icomoon.io/app/
+      Then click the stacked circle icon in the bottom right and upload the BlokIcoMoonSession.json file from this folder
+      After updating the icons simply download them and copy the fonts folder along with style.css into this folder and rename style.css to _icons.scss
+*/
 @font-face {
   font-family: 'icomoon';
   src:url('fonts/icomoon.eot');
@@ -11,7 +17,26 @@
   font-style: normal;
 }
 
-.icon-github, .icon-menu, .icon-dribbble, .icon-mail, .icon-google-plus, .icon-facebook, .icon-twitter, .icon-pinterest {
+/* Use the following CSS code if you want to use data attributes for inserting your icons */
+[data-icon]:before {
+  font-family: 'icomoon';
+  content: attr(data-icon);
+  speak: none;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* Use the following CSS code if you want to have a class per icon */
+/*
+Instead of a list of all class selectors,
+you can use the generic selector below, but it's slower:
+[class*="icon-"] {
+*/
+.icon-pinterest, .icon-github, .icon-twitter, .icon-menu, .icon-dribbble, .icon-facebook, .icon-google-plus, .icon-bubbles, .icon-link {
   font-family: 'icomoon';
   speak: none;
   font-style: normal;
@@ -21,24 +46,30 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
 }
-.icon-github:before {
-  content: "\e00b";
-}
-.icon-menu:before {
-  content: "\e001";
-}
-.icon-dribbble:before {
+.icon-pinterest:before {
   content: "\e000";
 }
-.icon-google-plus:before {
-  content: "\e005";
-}
-.icon-pinterest:before {
-  content: "\e003";
-}
-.icon-facebook:before {
-  content: "\e007";
+.icon-github:before {
+  content: "\e001";
 }
 .icon-twitter:before {
-  content: "\e00c";
+  content: "\e002";
+}
+.icon-menu:before {
+  content: "\e003";
+}
+.icon-dribbble:before {
+  content: "\e004";
+}
+.icon-facebook:before {
+  content: "\e005";
+}
+.icon-google-plus:before {
+  content: "\e006";
+}
+.icon-bubbles:before {
+  content: "\e007";
+}
+.icon-link:before {
+  content: "\e008";
 }
