--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
-@import 'compass/css3/transition';
-@import 'compass/css3/border-radius';
-@import 'compass/css3/box-shadow';
-@import 'solarized-dark.syntax.css';
+@import 'compass';
+
+@import 'normalize';
+@import 'solarized-dark';
 @import 'icons';
 @import 'base';
 @import 'nav';
