--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -13,7 +13,7 @@ mixin nav(current)
   ul.nav.group
     li.icon-menu.menu
     li.nav-link.red(class= current === "index" ? "active" : "")
-      a.name(href="#{data.baseUrl}") My Name
+      a.name(href="#{data.baseUrl}") Colin Wren
     li.nav-link.blue(class= current === "about" ? "active" : "")
       a(href="#{data.baseUrl}about.html") about
     li.nav-link.orange(class= current === "projects" ? "active" : "")
