--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -5,4 +5,4 @@ block nav
   mixin nav('about')
 block content
   .post
-    p A little about me
+    p My name is Colin Wren and I'm a web developer located in the San Francisco bay area. If you'd like to get in touch, you can reach me through my Email, GitHub, or Twitter.
