--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -1,9 +1,3 @@
-.post-head {
-  position: relative;
-  float: left;
-  width: 100%;
-}
-
 .post {
   padding: 1.8em 2.8em;
   margin: 0 0  33px;
@@ -19,7 +13,7 @@
 
 .post-title {
   margin: 0;
-  font-size: 2.1em;
+  font-size: 2.7em;
 }
 
 .post-date {
@@ -89,11 +83,18 @@
   }
 }
 
-p code {
-  background: hsl(240, 100%, 96%);
-  border: 1px solid hsl(0, 0%, 90%);
-  padding: 0 0.23em;
-  @include border-radius(3px);
+.post-body ul, .post-body ol {
+  padding-left: 30px;
+  list-style: disc;
+}
+
+p, li, ul {
+  code {
+    background: hsl(240, 100%, 96%);
+    border: 1px solid hsl(0, 0%, 90%);
+    padding: 0 0.23em;
+    @include border-radius(3px);
+  }
 }
 
 code {
