--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -17,9 +17,10 @@
 }
 
 .post-date {
-  margin: .2em 0;
-  font-size: 1.4em;
+  margin: .35em 0 .1em;
+  font-size: 1.6em;
   color: $lightTextColor;
+  letter-spacing: 1px;
 }
 
 .post-body {
