--- a/styles/main.css
+++ b/styles/main.css
@@ -848,14 +848,14 @@ you can use the generic selector below, but it's slower:
   content: "\e008";
 }
 
-/* line 30, ../../src/styles/_base.scss */
+/* line 36, ../../src/styles/_base.scss */
 .group:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* line 36, ../../src/styles/_base.scss */
+/* line 42, ../../src/styles/_base.scss */
 body {
   margin: 0;
   color: #393838;
@@ -865,47 +865,47 @@ body {
   font-size: 18px;
 }
 @media (max-width: 1250px) {
-  /* line 36, ../../src/styles/_base.scss */
+  /* line 42, ../../src/styles/_base.scss */
   body {
     font-size: 16px;
   }
 }
 @media (max-width: 630px) {
-  /* line 36, ../../src/styles/_base.scss */
+  /* line 42, ../../src/styles/_base.scss */
   body {
     font-size: 12px;
   }
 }
 
-/* line 54, ../../src/styles/_base.scss */
+/* line 60, ../../src/styles/_base.scss */
 abbr[title] {
   border-bottom-width: 0;
 }
 
-/* line 58, ../../src/styles/_base.scss */
+/* line 64, ../../src/styles/_base.scss */
 ul {
   padding: 0;
   margin: 0;
 }
 
-/* line 63, ../../src/styles/_base.scss */
+/* line 69, ../../src/styles/_base.scss */
 img {
   border-width: 0;
 }
 
-/* line 67, ../../src/styles/_base.scss */
+/* line 73, ../../src/styles/_base.scss */
 h2 {
   font-size: 1.5em;
   line-height: 1.7em;
 }
 
-/* line 72, ../../src/styles/_base.scss */
+/* line 78, ../../src/styles/_base.scss */
 a {
   color: #393838;
   text-decoration: none;
 }
 
-/* line 77, ../../src/styles/_base.scss */
+/* line 83, ../../src/styles/_base.scss */
 .content {
   position: relative;
   margin: 33px auto;
@@ -913,47 +913,47 @@ a {
   width: 60%;
 }
 @media (max-width: 1250px) {
-  /* line 77, ../../src/styles/_base.scss */
+  /* line 83, ../../src/styles/_base.scss */
   .content {
     width: 94%;
   }
 }
 @media (max-width: 630px) {
-  /* line 77, ../../src/styles/_base.scss */
+  /* line 83, ../../src/styles/_base.scss */
   .content {
     margin: 0 auto 10px;
     width: 100%;
   }
 }
-/* line 92, ../../src/styles/_base.scss */
+/* line 98, ../../src/styles/_base.scss */
 .content a:hover {
   text-decoration: underline;
 }
 
-/* line 97, ../../src/styles/_base.scss */
+/* line 103, ../../src/styles/_base.scss */
 .pagination {
   height: 40px;
 }
-/* line 100, ../../src/styles/_base.scss */
+/* line 106, ../../src/styles/_base.scss */
 .pagination a {
   padding: 10px;
   background: white;
-  -webkit-box-shadow: 5px 5px #e6e6e6;
-  -moz-box-shadow: 5px 5px #e6e6e6;
-  box-shadow: 5px 5px #e6e6e6;
+  -webkit-box-shadow: 5px 5px #e6e6e6, 4px 4px #e6e6e6, 3px 3px #e6e6e6, 2px 2px #e6e6e6, 1px 1px #e6e6e6;
+  -moz-box-shadow: 5px 5px #e6e6e6, 4px 4px #e6e6e6, 3px 3px #e6e6e6, 2px 2px #e6e6e6, 1px 1px #e6e6e6;
+  box-shadow: 5px 5px #e6e6e6, 4px 4px #e6e6e6, 3px 3px #e6e6e6, 2px 2px #e6e6e6, 1px 1px #e6e6e6;
 }
 
-/* line 106, ../../src/styles/_base.scss */
+/* line 112, ../../src/styles/_base.scss */
 .older {
   float: left;
 }
 
-/* line 110, ../../src/styles/_base.scss */
+/* line 116, ../../src/styles/_base.scss */
 .newer {
   float: right;
 }
 
-/* line 114, ../../src/styles/_base.scss */
+/* line 120, ../../src/styles/_base.scss */
 .cabin {
   position: fixed;
   right: 0.5em;
@@ -962,13 +962,13 @@ a {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20);
   opacity: 0.2;
 }
-/* line 121, ../../src/styles/_base.scss */
+/* line 127, ../../src/styles/_base.scss */
 .cabin:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
 }
 @media (max-width: 1250px) {
-  /* line 114, ../../src/styles/_base.scss */
+  /* line 120, ../../src/styles/_base.scss */
   .cabin {
     display: none;
   }
@@ -981,8 +981,9 @@ a {
 /* line 7, ../../src/styles/_markdown.scss */
 .markdown img {
   max-width: 100%;
+  margin: 15px 0;
 }
-/* line 11, ../../src/styles/_markdown.scss */
+/* line 12, ../../src/styles/_markdown.scss */
 .markdown .anchor {
   text-decoration: none;
   position: absolute;
@@ -991,41 +992,41 @@ a {
   outline: none;
   color: #393838;
 }
-/* line 19, ../../src/styles/_markdown.scss */
+/* line 20, ../../src/styles/_markdown.scss */
 .markdown .anchor:hover {
   text-decoration: none;
 }
-/* line 25, ../../src/styles/_markdown.scss */
+/* line 26, ../../src/styles/_markdown.scss */
 .markdown h1, .markdown h2, .markdown h3,
 .markdown h4, .markdown h5, .markdown h6 {
   line-height: 1.3;
 }
-/* line 29, ../../src/styles/_markdown.scss */
+/* line 30, ../../src/styles/_markdown.scss */
 .markdown h1:hover .header-link, .markdown h2:hover .header-link, .markdown h3:hover .header-link,
 .markdown h4:hover .header-link, .markdown h5:hover .header-link, .markdown h6:hover .header-link {
   visibility: visible;
 }
 
-/* line 35, ../../src/styles/_markdown.scss */
+/* line 36, ../../src/styles/_markdown.scss */
 .header-link {
   margin-left: -1.7em;
   visibility: hidden;
   font-size: 16px;
 }
 @media (max-width: 1250px) {
-  /* line 35, ../../src/styles/_markdown.scss */
+  /* line 36, ../../src/styles/_markdown.scss */
   .header-link {
     font-size: 14px;
   }
 }
 @media (max-width: 630px) {
-  /* line 35, ../../src/styles/_markdown.scss */
+  /* line 36, ../../src/styles/_markdown.scss */
   .header-link {
     font-size: 12px;
   }
 }
 
-/* line 49, ../../src/styles/_markdown.scss */
+/* line 50, ../../src/styles/_markdown.scss */
 code {
   background: #ebebff;
   border: 1px solid #e6e6e6;
@@ -1042,23 +1043,23 @@ code {
   font-family: Monaco, Consolas, monospace;
 }
 
-/* line 61, ../../src/styles/_markdown.scss */
+/* line 62, ../../src/styles/_markdown.scss */
 .markdown > pre {
   white-space: normal;
   font-family: Monaco, Consolas, monospace;
   overflow: auto;
   margin: 1em 0;
 }
-/* line 67, ../../src/styles/_markdown.scss */
+/* line 68, ../../src/styles/_markdown.scss */
 .markdown > pre pre {
   margin: 0;
 }
-/* line 72, ../../src/styles/_markdown.scss */
+/* line 73, ../../src/styles/_markdown.scss */
 .markdown > pre code {
   border: 0;
 }
 
-/* line 77, ../../src/styles/_markdown.scss */
+/* line 78, ../../src/styles/_markdown.scss */
 .highlight {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -1066,7 +1067,7 @@ code {
   -o-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 80, ../../src/styles/_markdown.scss */
+/* line 81, ../../src/styles/_markdown.scss */
 .highlight pre {
   padding: 15px;
   margin-bottom: 0;
@@ -1149,9 +1150,9 @@ code {
   color: white;
   font-size: 1.6em;
   background: #666666;
-  -webkit-box-shadow: 5px 5px #4d4d4d;
-  -moz-box-shadow: 5px 5px #4d4d4d;
-  box-shadow: 5px 5px #4d4d4d;
+  -webkit-box-shadow: 5px 5px #4d4d4d, 4px 4px #4d4d4d, 3px 3px #4d4d4d, 2px 2px #4d4d4d, 1px 1px #4d4d4d;
+  -moz-box-shadow: 5px 5px #4d4d4d, 4px 4px #4d4d4d, 3px 3px #4d4d4d, 2px 2px #4d4d4d, 1px 1px #4d4d4d;
+  box-shadow: 5px 5px #4d4d4d, 4px 4px #4d4d4d, 3px 3px #4d4d4d, 2px 2px #4d4d4d, 1px 1px #4d4d4d;
 }
 @media (max-width: 1250px) {
   /* line 56, ../../src/styles/_nav.scss */
@@ -1169,33 +1170,33 @@ code {
 /* line 75, ../../src/styles/_nav.scss */
 .red {
   background: #ff6b77;
-  -webkit-box-shadow: 5px 5px #eb4c59;
-  -moz-box-shadow: 5px 5px #eb4c59;
-  box-shadow: 5px 5px #eb4c59;
+  -webkit-box-shadow: 5px 5px #eb4c59, 4px 4px #eb4c59, 3px 3px #eb4c59, 2px 2px #eb4c59, 1px 1px #eb4c59;
+  -moz-box-shadow: 5px 5px #eb4c59, 4px 4px #eb4c59, 3px 3px #eb4c59, 2px 2px #eb4c59, 1px 1px #eb4c59;
+  box-shadow: 5px 5px #eb4c59, 4px 4px #eb4c59, 3px 3px #eb4c59, 2px 2px #eb4c59, 1px 1px #eb4c59;
 }
 
 /* line 76, ../../src/styles/_nav.scss */
 .green {
   background: #1fdb99;
-  -webkit-box-shadow: 5px 5px #2d9a74;
-  -moz-box-shadow: 5px 5px #2d9a74;
-  box-shadow: 5px 5px #2d9a74;
+  -webkit-box-shadow: 5px 5px #2d9a74, 4px 4px #2d9a74, 3px 3px #2d9a74, 2px 2px #2d9a74, 1px 1px #2d9a74;
+  -moz-box-shadow: 5px 5px #2d9a74, 4px 4px #2d9a74, 3px 3px #2d9a74, 2px 2px #2d9a74, 1px 1px #2d9a74;
+  box-shadow: 5px 5px #2d9a74, 4px 4px #2d9a74, 3px 3px #2d9a74, 2px 2px #2d9a74, 1px 1px #2d9a74;
 }
 
 /* line 77, ../../src/styles/_nav.scss */
 .blue {
   background: #6ba6ff;
-  -webkit-box-shadow: 5px 5px #4c8ceb;
-  -moz-box-shadow: 5px 5px #4c8ceb;
-  box-shadow: 5px 5px #4c8ceb;
+  -webkit-box-shadow: 5px 5px #4c8ceb, 4px 4px #4c8ceb, 3px 3px #4c8ceb, 2px 2px #4c8ceb, 1px 1px #4c8ceb;
+  -moz-box-shadow: 5px 5px #4c8ceb, 4px 4px #4c8ceb, 3px 3px #4c8ceb, 2px 2px #4c8ceb, 1px 1px #4c8ceb;
+  box-shadow: 5px 5px #4c8ceb, 4px 4px #4c8ceb, 3px 3px #4c8ceb, 2px 2px #4c8ceb, 1px 1px #4c8ceb;
 }
 
 /* line 78, ../../src/styles/_nav.scss */
 .orange {
   background: #ffa600;
-  -webkit-box-shadow: 5px 5px #b87e14;
-  -moz-box-shadow: 5px 5px #b87e14;
-  box-shadow: 5px 5px #b87e14;
+  -webkit-box-shadow: 5px 5px #b87e14, 4px 4px #b87e14, 3px 3px #b87e14, 2px 2px #b87e14, 1px 1px #b87e14;
+  -moz-box-shadow: 5px 5px #b87e14, 4px 4px #b87e14, 3px 3px #b87e14, 2px 2px #b87e14, 1px 1px #b87e14;
+  box-shadow: 5px 5px #b87e14, 4px 4px #b87e14, 3px 3px #b87e14, 2px 2px #b87e14, 1px 1px #b87e14;
 }
 
 /* line 80, ../../src/styles/_nav.scss */
@@ -1210,9 +1211,9 @@ code {
   padding: 2em 2.9em;
   margin: 0 0  33px;
   background: white;
-  -webkit-box-shadow: 5px 5px #e6e6e6;
-  -moz-box-shadow: 5px 5px #e6e6e6;
-  box-shadow: 5px 5px #e6e6e6;
+  -webkit-box-shadow: 5px 5px #e6e6e6, 4px 4px #e6e6e6, 3px 3px #e6e6e6, 2px 2px #e6e6e6, 1px 1px #e6e6e6;
+  -moz-box-shadow: 5px 5px #e6e6e6, 4px 4px #e6e6e6, 3px 3px #e6e6e6, 2px 2px #e6e6e6, 1px 1px #e6e6e6;
+  box-shadow: 5px 5px #e6e6e6, 4px 4px #e6e6e6, 3px 3px #e6e6e6, 2px 2px #e6e6e6, 1px 1px #e6e6e6;
 }
 
 /* line 7, ../../src/styles/_post.scss */
@@ -1221,9 +1222,9 @@ code {
   margin: 0 0 13px;
   padding: 14px 25px;
   background: white;
-  -webkit-box-shadow: 5px 5px #e6e6e6;
-  -moz-box-shadow: 5px 5px #e6e6e6;
-  box-shadow: 5px 5px #e6e6e6;
+  -webkit-box-shadow: 5px 5px #e6e6e6, 4px 4px #e6e6e6, 3px 3px #e6e6e6, 2px 2px #e6e6e6, 1px 1px #e6e6e6;
+  -moz-box-shadow: 5px 5px #e6e6e6, 4px 4px #e6e6e6, 3px 3px #e6e6e6, 2px 2px #e6e6e6, 1px 1px #e6e6e6;
+  box-shadow: 5px 5px #e6e6e6, 4px 4px #e6e6e6, 3px 3px #e6e6e6, 2px 2px #e6e6e6, 1px 1px #e6e6e6;
 }
 
 /* line 14, ../../src/styles/_post.scss */
@@ -1234,44 +1235,69 @@ code {
 
 /* line 19, ../../src/styles/_post.scss */
 .post-date {
-  margin: .2em 0;
-  font-size: 1.4em;
+  margin: .35em 0 .1em;
+  font-size: 1.6em;
   color: #b8b7b7;
+  letter-spacing: 1px;
 }
 
-/* line 25, ../../src/styles/_post.scss */
+/* line 26, ../../src/styles/_post.scss */
 .post-body {
   margin-bottom: 1.2em;
   line-height: 1.65em;
   font-size: 1em;
 }
-/* line 30, ../../src/styles/_post.scss */
+/* line 31, ../../src/styles/_post.scss */
 .post-body a {
   color: #4d91d5;
 }
 
-/* line 36, ../../src/styles/_post.scss */
+/* line 37, ../../src/styles/_post.scss */
 .social {
   padding: .55em 0 1.4em;
 }
 
-/* line 40, ../../src/styles/_post.scss */
+/* line 41, ../../src/styles/_post.scss */
 .comments {
   margin-top: 25px;
   font-weight: bold;
   font-size: 1.2em;
 }
-/* line 45, ../../src/styles/_post.scss */
+/* line 46, ../../src/styles/_post.scss */
 .comments a {
   color: #b8b7b7;
 }
-/* line 48, ../../src/styles/_post.scss */
+/* line 49, ../../src/styles/_post.scss */
 .comments a:hover {
   text-decoration: none;
   color: #4d91d5;
 }
-/* line 54, ../../src/styles/_post.scss */
+/* line 55, ../../src/styles/_post.scss */
 .comments .icon-bubbles {
   padding: 3px 15px 5px 0;
   float: left;
+}
+
+/* line 1, ../../src/styles/_about.scss */
+.colin {
+  width: 220px;
+  /*@include border-radius(50%);*/
+  background: #999999;
+  -webkit-box-shadow: 5px 5px gray, 4px 4px gray, 3px 3px gray, 2px 2px gray, 1px 1px gray;
+  -moz-box-shadow: 5px 5px gray, 4px 4px gray, 3px 3px gray, 2px 2px gray, 1px 1px gray;
+  box-shadow: 5px 5px gray, 4px 4px gray, 3px 3px gray, 2px 2px gray, 1px 1px gray;
+  float: left;
+  margin: 0 30px 20px 0;
+}
+
+/* line 9, ../../src/styles/_about.scss */
+.about-name {
+  font-size: 3.4em;
+  margin: 0 0 .2em;
+  text-align: center;
+}
+
+/* line 15, ../../src/styles/_about.scss */
+.intro {
+  font-size: 1.2em;
 }
