--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -25,7 +25,7 @@ html
   head
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    link(rel="icon", type="image/png", href="#{data.baseUrl}images/cabin.png")
+    link(rel="icon", type="image/png", href="#{data.baseUrl}images/favicon.png")
     link(href="#{data.baseUrl}styles/main.css", rel="stylesheet")
     block title
       title= "My Blog"
