Updated site title

--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -28,7 +28,7 @@ html
     link(rel="icon", type="image/png", href="#{data.baseUrl}images/favicon.png")
     link(href="#{data.baseUrl}styles/main.css", rel="stylesheet")
     block title
-      title= "My Blog"
+      title= "Colin Wren"
   body
     block nav
 
