--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -9,7 +9,9 @@ block content
     h1.about-name Colin Wren
     p.intro My name is Colin Wren and I'm a web developer located in the San Francisco bay area. If you'd like to get in touch, you can reach me through my 
 
-      a(href="mailto:colinwrenca@gmail.com") Email, 
-      a(href="https://github.com/colinwren") GitHub, 
-      | or 
+      a(href="mailto:colinwrenca@gmail.com") Email
+      | , 
+      a(href="https://github.com/colinwren") GitHub
+      | , or 
       a(href="https://twitter.com/colinwrenca") Twitter
+      |.
