--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -41,4 +41,13 @@ html
     script(src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.1.0/jquery.timeago.min.js", type="text/javascript")
     script(src="#{data.baseUrl}scripts/main.js", type="text/javascript")
     script.
-      // Add your analytics code here
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-34596567-2']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
